# cs69-final-project

./: .gitignore  README.md  bigmap.yaml  smallmap.yaml
imedit/: CMakeLists.txt
imedit/ext/tinyexr/: tinyexr.h
imedit/include/imedit/: im_util.h  image.h
imedit/misc/: node_generator.cpp
imedit/src/: image.cpp
map_merge/include/map_merge/: map_merge.h
map_merge/src/: map_merge.cpp
map_merging/: CMakeLists.txt  package.xml
map_merging/launch/: maps_no_init_poses.launch
map_merging/nodes/: map_forwarder  merge_handler
map_merging_utils/: CMakeLists.txt  README.md  package.xml  setup.py
map_merging_utils/launch/: maps_no_init_poses.launch  maps_no_init_poses_rework.launch
map_merging_utils/nodes/: map_forwarder  merge_handler  merge_handler_redone  merge_signaller
simple_maze_exploring/: CMakeLists.txt  README.md  package.xml  setup.py
simple_maze_exploring/launch/: everything_together_mapping.launch  pid_controller_test.launch  robot_detection_merging.launch  simple_flocking.launch  simple_flocking_2d.launch  simple_world.launch
simple_maze_exploring/nodes/: exit_maze  explorer  explorer_elliot  pid_controller  robot_detector  simple_exploration  simple_flocking  test_rotation
simple_maze_exploring/rviz/: gmapping.rviz
simple_maze_exploring/src/simple_maze_exploring/: bfs.py  dijkstra.py  drive_line.py  parse_graph.py  simple_motion.py
simple_maze_exploring/worlds/: empty_world.world  everything_together.world  robot_detection_merging.world  turtlebot.inc
