<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>simple_flocking</name>
  <version>0.1.0</version>
  <description>
    ROS package for moving the robot according to emergent flocking behavior.
  </description>
  <maintainer email="alphonso.p.bradham.24@dartmouth.edu">Alphonso Bradham</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
